<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_post"
            android:icon="@drawable/ic__add"
            android:title="@string/create_post" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/log_out" />
    </group>
</menu>