<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_create_post"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_cancel_creating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_z1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:text="@string/what_should_be_done"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_post_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/task_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_post_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_post_name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/address"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_z2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_post_address"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/when_should_you_start_working"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/date"
        android:inputType="none"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_z3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_datetime"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/what_budget_are_you_looking_for"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_price"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:scrollbars="horizontal" />
    <TextView
        android:id="@+id/tv_z4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerview"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/specify_the_details"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/description"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_publish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_description"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/publish"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp" />
</RelativeLayout>